# deproj

./: .gitignore  CMakeLists.txt  README.md
lib/: toml.hpp
src/: config.h  deproj.cpp  deproj.h  file_utility.h  main.cpp  tmplt.h  variable_visitor.h
